--- a/ListClients.ui
+++ b/ListClients.ui
@@ -75,6 +75,9 @@ border-radius: 7px;
       </item>
       <item row="0" column="3">
        <widget class="QPushButton" name="addClientButton">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="minimumSize">
          <size>
           <width>40</width>
@@ -205,6 +208,9 @@ QPushButton:pressed {
       </item>
       <item row="0" column="4">
        <widget class="QPushButton" name="csvExportButton">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="minimumSize">
          <size>
           <width>40</width>
