--- a/ListEmployees.ui
+++ b/ListEmployees.ui
@@ -68,6 +68,9 @@ border-radius: 7px;
       </item>
       <item row="0" column="1">
        <widget class="QPushButton" name="addWorkerButton">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="minimumSize">
          <size>
           <width>40</width>
@@ -164,6 +167,9 @@ QPushButton:pressed {
       </item>
       <item row="0" column="2">
        <widget class="QPushButton" name="csvExportButton">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="minimumSize">
          <size>
           <width>40</width>
