--- a/SettingsWindow.ui
+++ b/SettingsWindow.ui
@@ -113,7 +113,7 @@ QPushButton:pressed {
          <number>3</number>
         </property>
         <item row="3" column="1">
-         <widget class="QLineEdit" name="lineEdit_2">
+         <widget class="QLineEdit" name="userPassword">
           <property name="font">
            <font>
             <pointsize>10</pointsize>
@@ -126,6 +126,9 @@ QPushButton:pressed {
     background-color: #dbdcf7;
 	padding-left: 3px;
 }</string>
+          </property>
+          <property name="echoMode">
+           <enum>QLineEdit::Password</enum>
           </property>
          </widget>
         </item>
@@ -168,7 +171,7 @@ QPushButton:pressed {
          </widget>
         </item>
         <item row="3" column="0">
-         <widget class="QLineEdit" name="lineEdit">
+         <widget class="QLineEdit" name="userLogin">
           <property name="font">
            <font>
             <pointsize>10</pointsize>
@@ -430,6 +433,119 @@ QPushButton:pressed {
         <property name="spacing">
          <number>3</number>
         </property>
+        <item row="2" column="0">
+         <widget class="QLineEdit" name="hostName">
+          <property name="font">
+           <font>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">QLineEdit {
+	border: 1px solid gray;
+    border-radius: 7px;
+    background-color: #dbdcf7;
+	padding-left: 3px;
+}</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLabel" name="label_15">
+          <property name="font">
+           <font>
+            <pointsize>9</pointsize>
+           </font>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">QLabel {
+	border: 0px;
+	background-color: transparent;
+}
+</string>
+          </property>
+          <property name="text">
+           <string>Имя хоста:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="0">
+         <widget class="QLabel" name="label_13">
+          <property name="font">
+           <font>
+            <pointsize>9</pointsize>
+           </font>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">QLabel {
+	border: 0px;
+	background-color: transparent;
+}
+</string>
+          </property>
+          <property name="text">
+           <string>Имя базы данных:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="7" column="0">
+         <widget class="QLabel" name="label_14">
+          <property name="font">
+           <font>
+            <pointsize>9</pointsize>
+           </font>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">QLabel {
+	border: 0px;
+	background-color: transparent;
+}
+</string>
+          </property>
+          <property name="text">
+           <string>Пароль:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="0">
+         <widget class="QLabel" name="label_12">
+          <property name="font">
+           <font>
+            <pointsize>9</pointsize>
+           </font>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">QLabel {
+	border: 0px;
+	background-color: transparent;
+}
+</string>
+          </property>
+          <property name="text">
+           <string>Имя пользователя:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="8" column="0">
+         <widget class="QLineEdit" name="dbPassword">
+          <property name="font">
+           <font>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">QLineEdit {
+	border: 1px solid gray;
+    border-radius: 7px;
+    background-color: #dbdcf7;
+	padding-left: 3px;
+}</string>
+          </property>
+          <property name="echoMode">
+           <enum>QLineEdit::Password</enum>
+          </property>
+         </widget>
+        </item>
         <item row="0" column="0">
          <widget class="QFrame" name="frame_5">
           <property name="minimumSize">
@@ -498,61 +614,6 @@ QPushButton:pressed {
           </layout>
          </widget>
         </item>
-        <item row="1" column="0">
-         <widget class="QLabel" name="label_15">
-          <property name="font">
-           <font>
-            <pointsize>9</pointsize>
-           </font>
-          </property>
-          <property name="styleSheet">
-           <string notr="true">QLabel {
-	border: 0px;
-	background-color: transparent;
-}
-</string>
-          </property>
-          <property name="text">
-           <string>Имя хоста:</string>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="0">
-         <widget class="QLineEdit" name="hostName">
-          <property name="font">
-           <font>
-            <pointsize>10</pointsize>
-           </font>
-          </property>
-          <property name="styleSheet">
-           <string notr="true">QLineEdit {
-	border: 1px solid gray;
-    border-radius: 7px;
-    background-color: #dbdcf7;
-	padding-left: 3px;
-}</string>
-          </property>
-         </widget>
-        </item>
-        <item row="3" column="0">
-         <widget class="QLabel" name="label_13">
-          <property name="font">
-           <font>
-            <pointsize>9</pointsize>
-           </font>
-          </property>
-          <property name="styleSheet">
-           <string notr="true">QLabel {
-	border: 0px;
-	background-color: transparent;
-}
-</string>
-          </property>
-          <property name="text">
-           <string>Имя базы данных:</string>
-          </property>
-         </widget>
-        </item>
         <item row="4" column="0">
          <widget class="QLineEdit" name="dbName">
           <property name="font">
@@ -570,62 +631,7 @@ QPushButton:pressed {
           </property>
          </widget>
         </item>
-        <item row="5" column="0">
-         <widget class="QLabel" name="label_14">
-          <property name="font">
-           <font>
-            <pointsize>9</pointsize>
-           </font>
-          </property>
-          <property name="styleSheet">
-           <string notr="true">QLabel {
-	border: 0px;
-	background-color: transparent;
-}
-</string>
-          </property>
-          <property name="text">
-           <string>Пароль:</string>
-          </property>
-         </widget>
-        </item>
         <item row="6" column="0">
-         <widget class="QLineEdit" name="dbPassword">
-          <property name="font">
-           <font>
-            <pointsize>10</pointsize>
-           </font>
-          </property>
-          <property name="styleSheet">
-           <string notr="true">QLineEdit {
-	border: 1px solid gray;
-    border-radius: 7px;
-    background-color: #dbdcf7;
-	padding-left: 3px;
-}</string>
-          </property>
-         </widget>
-        </item>
-        <item row="7" column="0">
-         <widget class="QLabel" name="label_12">
-          <property name="font">
-           <font>
-            <pointsize>9</pointsize>
-           </font>
-          </property>
-          <property name="styleSheet">
-           <string notr="true">QLabel {
-	border: 0px;
-	background-color: transparent;
-}
-</string>
-          </property>
-          <property name="text">
-           <string>Имя пользователя:</string>
-          </property>
-         </widget>
-        </item>
-        <item row="8" column="0">
          <widget class="QLineEdit" name="userName">
           <property name="font">
            <font>
@@ -706,10 +712,10 @@ QPushButton:pressed {
   <tabstop>languageSelection</tabstop>
   <tabstop>hostName</tabstop>
   <tabstop>dbName</tabstop>
-  <tabstop>dbPassword</tabstop>
   <tabstop>userName</tabstop>
-  <tabstop>lineEdit</tabstop>
-  <tabstop>lineEdit_2</tabstop>
+  <tabstop>dbPassword</tabstop>
+  <tabstop>userLogin</tabstop>
+  <tabstop>userPassword</tabstop>
   <tabstop>userFirstName</tabstop>
   <tabstop>userSecondName</tabstop>
   <tabstop>userThirdName</tabstop>
