--- a/ViewUpdateClient.ui
+++ b/ViewUpdateClient.ui
@@ -19,7 +19,7 @@
 }</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="1" column="1">
+   <item row="1" column="2">
     <widget class="QPushButton" name="saveUpdatedInfo">
      <property name="enabled">
       <bool>false</bool>
@@ -83,7 +83,7 @@ QPushButton:pressed {
      </property>
     </spacer>
    </item>
-   <item row="0" column="0" colspan="2">
+   <item row="0" column="0" colspan="3">
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
       <number>0</number>
@@ -460,6 +460,9 @@ QPushButton:pressed {
        </item>
        <item row="0" column="1">
         <widget class="QPushButton" name="createOrderByClientButton">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="minimumSize">
           <size>
            <width>40</width>
@@ -508,6 +511,9 @@ QPushButton:pressed {
        </item>
        <item row="0" column="2">
         <widget class="QPushButton" name="updateInfoButton">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="minimumSize">
           <size>
            <width>40</width>
@@ -689,8 +695,73 @@ QPushButton:pressed {
      </widget>
     </widget>
    </item>
+   <item row="1" column="1">
+    <widget class="QPushButton" name="deleteClientButton">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>40</width>
+       <height>40</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>40</width>
+       <height>40</height>
+      </size>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QPushButton {
+	background-color: #dbdcf7;
+	border: 1px solid #999999;
+}
+
+QPushButton:hover {
+	background-color: #d5d6f0;
+	border: 1px solid #acacac;
+}
+
+QPushButton:pressed {
+	background-color: #cbcde6;
+	border: 2px solid #999999;
+}</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset resource="images.qrc">
+       <normaloff>:/images/clearList.png</normaloff>:/images/clearList.png</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>50</width>
+       <height>50</height>
+      </size>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>createOrderByClientButton</tabstop>
+  <tabstop>updateInfoButton</tabstop>
+  <tabstop>clientTypeComboBox</tabstop>
+  <tabstop>clientFMLname</tabstop>
+  <tabstop>contacts</tabstop>
+  <tabstop>email</tabstop>
+  <tabstop>autoBrand</tabstop>
+  <tabstop>autoModel</tabstop>
+  <tabstop>manufactureYear</tabstop>
+  <tabstop>autoLicensePlate</tabstop>
+  <tabstop>mileageLine</tabstop>
+  <tabstop>VINnumber</tabstop>
+  <tabstop>tableView</tabstop>
+  <tabstop>tabWidget</tabstop>
+  <tabstop>saveUpdatedInfo</tabstop>
+ </tabstops>
  <resources>
   <include location="images.qrc"/>
  </resources>
