--- a/ViewUpdateTask.ui
+++ b/ViewUpdateTask.ui
@@ -289,7 +289,30 @@ QPushButton:pressed {
    </item>
    <item row="2" column="0" colspan="3">
     <layout class="QGridLayout" name="gridLayout_3">
-     <item row="1" column="2">
+     <item row="0" column="0" colspan="4">
+      <widget class="QTextEdit" name="contentLine">
+       <property name="font">
+        <font>
+         <pointsize>9</pointsize>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QTextEdit {
+	border: 1px solid gray;
+    border-radius: 7px;
+    background-color: #dbdcf7;
+	padding-left: 3px;
+}</string>
+       </property>
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
+       <property name="placeholderText">
+        <string>Текст задания</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="3">
       <widget class="QPushButton" name="saveUpdatedInfo">
        <property name="enabled">
         <bool>false</bool>
@@ -356,26 +379,51 @@ QPushButton:pressed {
        </property>
       </spacer>
      </item>
-     <item row="0" column="0" colspan="3">
-      <widget class="QTextEdit" name="contentLine">
-       <property name="font">
-        <font>
-         <pointsize>9</pointsize>
-        </font>
+     <item row="1" column="2">
+      <widget class="QPushButton" name="deleteTaskButton">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>40</width>
+         <height>40</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>40</width>
+         <height>40</height>
+        </size>
        </property>
        <property name="styleSheet">
-        <string notr="true">QTextEdit {
-	border: 1px solid gray;
-    border-radius: 7px;
-    background-color: #dbdcf7;
-	padding-left: 3px;
+        <string notr="true">QPushButton {
+	background-color: #dbdcf7;
+	border: 1px solid #999999;
+}
+
+QPushButton:hover {
+	background-color: #d5d6f0;
+	border: 1px solid #acacac;
+}
+
+QPushButton:pressed {
+	background-color: #cbcde6;
+	border: 2px solid #999999;
 }</string>
        </property>
-       <property name="readOnly">
-        <bool>true</bool>
+       <property name="text">
+        <string/>
        </property>
-       <property name="placeholderText">
-        <string>Текст задания</string>
+       <property name="icon">
+        <iconset resource="images.qrc">
+         <normaloff>:/images/clearList.png</normaloff>:/images/clearList.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>50</width>
+         <height>50</height>
+        </size>
        </property>
       </widget>
      </item>
@@ -384,6 +432,7 @@ QPushButton:pressed {
   </layout>
  </widget>
  <tabstops>
+  <tabstop>updateTaskButton</tabstop>
   <tabstop>dateLine</tabstop>
   <tabstop>timeLine</tabstop>
   <tabstop>checkBox</tabstop>
