--- a/src/app/view/AddSparePart.ui
+++ b/src/app/view/AddSparePart.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>551</width>
-    <height>235</height>
+    <height>221</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -107,29 +107,6 @@ QMessageBox {
        </property>
       </widget>
      </item>
-     <item row="5" column="0">
-      <widget class="QLineEdit" name="isOriginalLine">
-       <property name="minimumSize">
-        <size>
-         <width>260</width>
-         <height>0</height>
-        </size>
-       </property>
-       <property name="font">
-        <font>
-         <pointsize>10</pointsize>
-        </font>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">QLineEdit {
-	border: 1px solid gray;
-    border-radius: 7px;
-    background-color: #dbdcf7;
-	padding-left: 3px;
-}</string>
-       </property>
-      </widget>
-     </item>
      <item row="6" column="2">
       <widget class="QPushButton" name="createSparePartButton">
        <property name="minimumSize">
@@ -137,6 +114,9 @@ QMessageBox {
          <width>40</width>
          <height>40</height>
         </size>
+       </property>
+       <property name="toolTip">
+        <string>Сохранить запчасть</string>
        </property>
        <property name="styleSheet">
         <string notr="true">QPushButton {
@@ -313,6 +293,24 @@ QPushButton:pressed {
        </property>
       </widget>
      </item>
+     <item row="5" column="0">
+      <widget class="QComboBox" name="isOriginalComboBox">
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QComboBox {
+	border: 1px solid gray;
+    border-top-left-radius: 7px;
+	border-bottom-left-radius: 7px;
+    background-color: #dbdcf7;
+	padding-left: 6px;
+}</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
   </layout>
@@ -322,7 +320,7 @@ QPushButton:pressed {
   <tabstop>manufacturerLine</tabstop>
   <tabstop>quantityInStockLine</tabstop>
   <tabstop>autoCompatibilityLine</tabstop>
-  <tabstop>isOriginalLine</tabstop>
+  <tabstop>isOriginalComboBox</tabstop>
   <tabstop>priceLine</tabstop>
   <tabstop>createSparePartButton</tabstop>
  </tabstops>
