--- a/src/app/view/AddTask.ui
+++ b/src/app/view/AddTask.ui
@@ -174,6 +174,9 @@ QMessageBox {
          <height>16777215</height>
         </size>
        </property>
+       <property name="toolTip">
+        <string>Сохранить задание</string>
+       </property>
        <property name="styleSheet">
         <string notr="true">QPushButton {
 	background-color: #dbdcf7;
