--- a/src/app/view/ListEmployees.ui
+++ b/src/app/view/ListEmployees.ui
@@ -69,7 +69,7 @@ border-radius: 7px;
       <item row="0" column="1">
        <widget class="QPushButton" name="addWorkerButton">
         <property name="enabled">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
         <property name="minimumSize">
          <size>
@@ -78,7 +78,7 @@ border-radius: 7px;
          </size>
         </property>
         <property name="toolTip">
-         <string>Добавить работника СТО</string>
+         <string>Добавить сотрудника</string>
         </property>
         <property name="statusTip">
          <string/>
@@ -168,7 +168,7 @@ QPushButton:pressed {
       <item row="0" column="2">
        <widget class="QPushButton" name="csvExportButton">
         <property name="enabled">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
         <property name="minimumSize">
          <size>
@@ -181,6 +181,9 @@ QPushButton:pressed {
           <width>40</width>
           <height>40</height>
          </size>
+        </property>
+        <property name="toolTip">
+         <string>Экспорт данных</string>
         </property>
         <property name="styleSheet">
          <string notr="true">QPushButton {
