--- a/src/app/view/ViewUpdateClient.ui
+++ b/src/app/view/ViewUpdateClient.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Редактирование информации о клиенте</string>
+   <string>Просмотр и редактирование информации о клиенте</string>
   </property>
   <property name="styleSheet">
    <string notr="true">QDialog {
@@ -35,6 +35,9 @@
        <width>40</width>
        <height>40</height>
       </size>
+     </property>
+     <property name="toolTip">
+      <string>Сохранить изменения</string>
      </property>
      <property name="styleSheet">
       <string notr="true">QPushButton {
@@ -475,6 +478,9 @@ QPushButton:pressed {
            <height>40</height>
           </size>
          </property>
+         <property name="toolTip">
+          <string>Создать заказ</string>
+         </property>
          <property name="styleSheet">
           <string notr="true">QPushButton {
 	background-color: #dbdcf7;
@@ -712,6 +718,9 @@ QPushButton:pressed {
        <height>40</height>
       </size>
      </property>
+     <property name="toolTip">
+      <string>Удалить информацию о клиенте</string>
+     </property>
      <property name="styleSheet">
       <string notr="true">QPushButton {
 	background-color: #dbdcf7;
@@ -740,6 +749,9 @@ QPushButton:pressed {
        <width>50</width>
        <height>50</height>
       </size>
+     </property>
+     <property name="autoDefault">
+      <bool>false</bool>
      </property>
     </widget>
    </item>
