--- a/src/app/view/ViewUpdateEmployee.ui
+++ b/src/app/view/ViewUpdateEmployee.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Редактирование информации о сотруднике</string>
+   <string>Просмотр и редактирование информации о сотруднике</string>
   </property>
   <property name="styleSheet">
    <string notr="true">QDialog {
@@ -264,6 +264,9 @@ QPushButton:pressed {
        <height>40</height>
       </size>
      </property>
+     <property name="toolTip">
+      <string>Сохранить изменения</string>
+     </property>
      <property name="styleSheet">
       <string notr="true">QPushButton {
 	background-color: #dbdcf7;
@@ -315,6 +318,9 @@ QPushButton:pressed {
        <height>40</height>
       </size>
      </property>
+     <property name="toolTip">
+      <string>Удалить информацию о сотруднике</string>
+     </property>
      <property name="styleSheet">
       <string notr="true">QPushButton {
 	background-color: #dbdcf7;
@@ -344,15 +350,20 @@ QPushButton:pressed {
        <height>50</height>
       </size>
      </property>
+     <property name="autoDefault">
+      <bool>false</bool>
+     </property>
     </widget>
    </item>
   </layout>
  </widget>
  <tabstops>
+  <tabstop>updateEmployeeInfoButton</tabstop>
   <tabstop>workerFMLname</tabstop>
   <tabstop>workerPosition</tabstop>
   <tabstop>hourlyPayment</tabstop>
   <tabstop>serviceNumber</tabstop>
+  <tabstop>deleteEmployeeButton</tabstop>
   <tabstop>saveUpdatedInfo</tabstop>
  </tabstops>
  <resources>
