--- a/src/app/view/ListClients.ui
+++ b/src/app/view/ListClients.ui
@@ -29,6 +29,12 @@ QMessageBox {
      <property name="styleSheet">
       <string notr="true"/>
      </property>
+     <property name="verticalScrollMode">
+      <enum>QAbstractItemView::ScrollPerPixel</enum>
+     </property>
+     <property name="horizontalScrollMode">
+      <enum>QAbstractItemView::ScrollPerPixel</enum>
+     </property>
     </widget>
    </item>
    <item row="0" column="0">
