--- a/src/app/view/ListTasks.ui
+++ b/src/app/view/ListTasks.ui
@@ -80,7 +80,7 @@ QPushButton:pressed {
          <string/>
         </property>
         <property name="icon">
-         <iconset>
+         <iconset resource="../../images.qrc">
           <normaloff>:/images/refresh.png</normaloff>:/images/refresh.png</iconset>
         </property>
         <property name="iconSize">
@@ -128,7 +128,7 @@ QPushButton:pressed {
          <string/>
         </property>
         <property name="icon">
-         <iconset>
+         <iconset resource="../../images.qrc">
           <normaloff>:/images/addTask.png</normaloff>:/images/addTask.png</iconset>
         </property>
         <property name="iconSize">
@@ -165,6 +165,12 @@ QPushButton:pressed {
 	font-size: 9pt;
 }</string>
      </property>
+     <property name="verticalScrollMode">
+      <enum>QAbstractItemView::ScrollPerPixel</enum>
+     </property>
+     <property name="horizontalScrollMode">
+      <enum>QAbstractItemView::ScrollPerPixel</enum>
+     </property>
     </widget>
    </item>
   </layout>
@@ -174,6 +180,8 @@ QPushButton:pressed {
   <tabstop>updateButton</tabstop>
   <tabstop>tableView</tabstop>
  </tabstops>
- <resources/>
+ <resources>
+  <include location="../../images.qrc"/>
+ </resources>
  <connections/>
 </ui>
