--- a/src/app/view/ViewUpdateTask.ui
+++ b/src/app/view/ViewUpdateTask.ui
@@ -242,6 +242,9 @@ QPushButton:pressed {
        </item>
        <item>
         <widget class="QCheckBox" name="checkBox">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="minimumSize">
           <size>
            <width>25</width>
@@ -269,6 +272,9 @@ QPushButton:pressed {
           </size>
          </property>
          <property name="checkable">
+          <bool>true</bool>
+         </property>
+         <property name="checked">
           <bool>false</bool>
          </property>
          <property name="tristate">
